--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
