--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "framer-motion": "^10.18.0",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
+    "npm": "^10.3.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
