--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.18.0",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
