--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.2.9",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.18.0",
+    "million": "^2.6.4",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "npm": "^10.3.0",
