--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
-    "dotenv": "^16.3.1",
     "framer-motion": "^10.18.0",
     "million": "^2.6.4",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "npm": "^10.3.0",
+    "package.json": "^2.0.1",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
